--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
+
 <div class="mainArea">
   <div class="container">
     <div class="columns is-centered">
@@ -5,15 +6,17 @@
         <h1 class="title has-text-centered">Harf Eşleştirme</h1>
 
         <p class="has-text-centered">
-          Rastgele Text
+         <span [class]="compare(letter,enteredText[i])" *ngFor="let letter of randomText.split('');let i =index"
+         >{{letter}}</span>
         </p>
         <div class="field">
-          <input class="input" />
+          <input class="input" (input)="getInputValue($event.target.value)" />
         </div>
-        <div>
+        <div *ngIf="randomText === enteredText">
           <h1 class="title">Bravo!</h1>
         </div>
       </div>
     </div>
   </div>
 </div>
+
